<resources>
    <string name="app_name">Dr Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="activity_profile"></string>
    <string name="nav_menu_home">Dashboard</string>
    <string name="nav_menu_doctors">Doctors</string>
    <string name="nav_menu_appointments">Appointments</string>
    <string name="nav_menu_services">Services</string>
    <string name="nav_menu_chats">Chats</string>
    <string name="nav_menu_clinics">Clinics</string>
    <string name="nav_menu_news">News</string>
    <string name="nav_menu_about_us">About Us</string>
    <string name="nav_menu_contact_us">Contact Us</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_sign_out">Log out</string>

    <!-- Appointment -->
    <string name="get_appointment">Get Appointment</string>
    <string name="add_to_favourite">Add to favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Pofile activity-->
    <string name="enter_name">Enter name</string>
    <string name="departments">Departments</string>
    <string name="enter_specialty">Enter specialty</string>
    <string name="enter_degrees">Enter degrees</string>
    <string name="about_me">About me</string>
    <string name="btn_submit">Submit</string>

    <!-- Accessories related -->
    <string name="search_hint">Enter doctors name</string>

</resources>
